RESOLVED FIXED279803
Cloudflare Captcha does not render under site isolation
https://bugs.webkit.org/show_bug.cgi?id=279803
Summary Cloudflare Captcha does not render under site isolation
Matt Woodrow
Reported 2024-09-16 18:00:54 PDT
1. Go to https://app.dashlane.com 2. Observe cloud flare captcha with site isolation on 3. Observe captcha does not fully load 4. Turn off site isolation and notice captcha does load
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-16 18:01:22 PDT
Matt Woodrow
Comment 2 2024-09-16 18:06:56 PDT
EWS
Comment 3 2024-09-18 18:52:20 PDT
Committed 283881@main (cf950ff77fd7): <https://commits.webkit.org/283881@main> Reviewed commits have been landed. Closing PR #33741 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.