Cloudflare Captcha does not render under site isolation. https://bugs.webkit.org/show_bug.cgi?id=279803 <rdar://136116291>

Reviewed by Alex Christensen.

https://app.dashlane.com never displays the captcha with site-isolation enabled.

The issue is that RenderWidget::setWidget doesn't get called until after
::requiresLayers has been evaluated.

Setting a new widget can affect the result of requiresLayer, so we need to
invalidate style so that it gets checked again.

* LayoutTests/http/tests/site-isolation/remote-frame-loaded-while-hidden-expected.html: Added.
* LayoutTests/http/tests/site-isolation/remote-frame-loaded-while-hidden.html: Added.
* Source/WebCore/rendering/RenderWidget.cpp:
(WebCore::RenderWidget::setWidget):

Canonical link: https://commits.webkit.org/283881@main